# bulletproof-gadgets

./: Cargo.toml  README.md  rustfmt.toml
.circleci/: config.yml
.github/workflows/: build.yml
scripts/: test.sh
src/: lib.rs  main.rs  utils.rs
src/bridged_mt/: mod.rs  setup.rs  test.rs  tests.rs  util.rs
src/crypto_constants/: mod.rs  utils.rs
src/crypto_constants/data/poseidon/: calc_round_numbers.py  generate.sh  generate_parameters_grain.sage  generate_parameters_grain.sage.py  inverse_2.txt  inverse_3.txt  inverse_4.txt  inverse_5.txt  inverse_6.txt  inverse_7.txt  inverse_8.txt  inverse_9.txt  params.txt  x3_2.txt  x3_3.txt  x3_4.txt  x3_5.txt  x3_6.txt  x3_7.txt  x3_8.txt  x3_9.txt  x5_2.txt  x5_3.txt  x5_4.txt  x5_5.txt  x5_6.txt  x5_7.txt  x5_8.txt  x5_9.txt
src/crypto_constants/poseidon/: inverse_2.rs  inverse_3.rs  inverse_4.rs  inverse_5.rs  inverse_6.rs  inverse_7.rs  inverse_8.rs  inverse_9.rs  mod.rs  params.rs  x17_2.rs  x17_3.rs  x17_4.rs  x17_5.rs  x17_6.rs  x17_7.rs  x17_8.rs  x17_9.rs  x3_2.rs  x3_3.rs  x3_4.rs  x3_5.rs  x3_6.rs  x3_7.rs  x3_8.rs  x3_9.rs  x5_2.rs  x5_3.rs  x5_4.rs  x5_5.rs  x5_6.rs  x5_7.rs  x5_8.rs  x5_9.rs
src/crypto_constants/smt/: inverse_6.rs  mod.rs  x17_6.rs  x3_6.rs  x5_6.rs
src/fixed_deposit_tree/: builder.rs  mod.rs  tests.rs
src/poseidon/: builder.rs  mod.rs  sbox.rs  tests.rs
src/smt/: builder.rs  smt.rs  tests.rs
src/time_based_rewarding/: builder.rs  mod.rs  tests.rs
src/transaction/: builder.rs  mod.rs  tests.rs
src/variable_deposit_tree/: builder.rs  mod.rs  tests.rs
src/zero_nonzero/: mod.rs  tests.rs
