[package]
name = "bulletproofs-gadgets"
authors = ["Drew Stone <drew@commonwealth.im>",
           "Filip Lazovic <filip@commonwealth.im>",
           "Shady Khalifa <shekohex@gmail.com>"]
description = "R1CS Gadgets for Curve25519"
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
version = "2.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
sp-std = { default-features = false, version = "2.0.0" }
merlin = { version = "2.0.0", default-features = false }
rand_core = { version = "0.5", default-features = false, features = ["alloc", "getrandom"] }

hex = { version = "0.4.2", optional = true }
num-bigint = { version = "0.3", default-features = false, optional = true }

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.4"

[dependencies.curve25519-dalek]
version = "3.0.0"
default-features = false
features = ["u64_backend", "alloc"]

[dependencies.bulletproofs]
version = "2.0.0"
package = "webb-bulletproofs"
git = "https://github.com/webb-tools/bulletproofs"
branch = "pub-bp-gens"
default-features = false
features = ["yoloproofs"]

[dependencies.bencher]
version = "0.1.5"

[features]
default = ["std"]
verify = []
std = [
    "codec/std",
    "hex",
    "num-bigint"
]
