[package]
name = "bulletproofs-gadgets"
authors = ["Drew Stone <drew@commonwealth.im>",
           "Filip Lazovic <filip@commonwealth.im>",
           "Shady Khalifa <shekohex@gmail.com>"]
description = "R1CS Gadgets for Curve25519"
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
version = "2.1.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
sp-std = { default-features = false, version = "2.0.0" }
merlin = { version = "2.0.0", default-features = false }
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rand_chacha = { version = "0.2", default-features = false }
hex = { version = "0.4.2", optional = true }
num-bigint = { version = "0.3", default-features = false, optional = true }

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.4"

[dependencies.curve25519-dalek]
version = "3.0.0"
default-features = false
features = ["u64_backend", "alloc"]

[dependencies.bulletproofs]
version = "2.0.3"
package = "webb-bulletproofs"
git = "https://github.com/webb-tools/bulletproofs"
default-features = false
features = ["yoloproofs"]

[dependencies.bencher]
version = "0.1.5"

[features]
default = ["std"]

poseidon_x3_2 = []
poseidon_x3_3 = []
poseidon_x3_4 = []
poseidon_x3_5 = []
poseidon_x3_6 = []
poseidon_x3_7 = []
poseidon_x3_8 = []
poseidon_x3_9 = []

poseidon_x5_2 = []
poseidon_x5_3 = []
poseidon_x5_4 = []
poseidon_x5_5 = []
poseidon_x5_6 = []
poseidon_x5_7 = []
poseidon_x5_8 = []
poseidon_x5_9 = []

poseidon_x17_2 = []
poseidon_x17_3 = []
poseidon_x17_4 = []
poseidon_x17_5 = []
poseidon_x17_6 = []
poseidon_x17_7 = []
poseidon_x17_8 = []
poseidon_x17_9 = []

poseidon_inverse_2 = []
poseidon_inverse_3 = []
poseidon_inverse_4 = []
poseidon_inverse_5 = []
poseidon_inverse_6 = []
poseidon_inverse_7 = []
poseidon_inverse_8 = []
poseidon_inverse_9 = []

verify = []
std = [
    "rand_core/getrandom",
    "codec/std",
    "hex",
    "num-bigint"
]
